dataset1235/2025-2/610742602/users/1691202220/executions/677928262_2383239197.log
== SUBMISSION (2025-08-28 20:12:21)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digiteo ângulo Y entre A e B (em gruas): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:13:26)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em gruas): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:15:09)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:13:50)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:13:28)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em gruas): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:13:33)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em gruas): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:13:50)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:13:31)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em gruas): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:14:26)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância B entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:16:27)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:12:31)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digiteo ângulo Y entre A e B (em gruas): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:14:52)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:15:11)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:12:26)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digiteo ângulo Y entre A e B (em gruas): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:16:42)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B * math.cos(gamma_rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:15:08)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:13:32)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em gruas): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:16:28)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma_rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:13:47)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:16:50)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B * math.cos(gamma_rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distância A entre o observador e a primeira arvore: Digite a distância B entre o observador e a segunda arvore: Digite o ângulo Y entre A e B (em graus): A distância entre as duas arvores é: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:15:08)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:14:53)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:16:12)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira arvore: "))
B = float(input("Digite a distância B entre o observador e a segunda arvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas arvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:13:51)
-- CODE: 
import math
A = float(input("Digite a distância A entre o observador e a primeira árvore: "))
B = float(input("Digite a distância b entre o observador e a segunda árvore: "))
gamma_graus = float(input("Digite o ângulo Y entre A e B (em graus): "))

gamma_rad = math.radians(gamma_graus)

CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))

CC_rounded = round(CC, 2)

print(f'A distância entre as duas árvores é: {CC_rounded} ')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    CC = math.sqrt(A ** 2 + B ** 2 - 2 * A * B math.cos(gamma.rad))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
